# CleanupStackChecker

./: CMakeLists.txt  README.md
CleanupStackChecker/: CheckCleanupStackAction.cpp  CheckCleanupStackAction.h  CheckCleanupStackConsumer.cpp  CheckCleanupStackConsumer.h  main.cpp
CleanupStackChecker.xcodeproj/: project.pbxproj
CleanupStackChecker.xcodeproj/xcshareddata/xcschemes/: CleanupStackChecker.xcscheme
CleanupStackChecker/helper/: ErrorMgr.cpp  ErrorMgr.h  MethodInfo.h  MethodUtils.cpp  MethodUtils.h
CleanupStackChecker/matchers/: CallExprHandler.cpp  CallExprHandler.h
CleanupStackChecker/test/: CBase.cpp  CBase.h  CSomeClass.cpp  CSomeClass.h  CleanupStack.cpp  CleanupStack.h  demo.cpp
